# attendance

./: .gitignore  Changelog  MANIFEST.in  README.md  setup.cfg  setup.py  setup.py.bak
attendance/: __init__.py  attendance.py  auth.py  check.py  db.py  employee.py  leave.py  mail.py
attendance/config/: attendance.service  config.py  logging.yaml
attendance/static/: style.css
attendance/templates/: data.html  forms.html  index.html
migrations/versions/: 0e920f4f1e01_add_leave_allocation_table.py  119d2fcd0d9f_rename_column_names_in_leave_available_.py  3bea1221d5b2_rename_column_names_in_leave_allocation_.py  a12cf9716f7e_rename_column_join_date_to_joining_date_.py  f467fb472abf_add_join_date_column_in_employee_table.py
src/attendance/: __init__.py  application.py  attendance.py  auth.py  check.py  create_hash.py  db.py  employee.py  forms.py  functions.py  help.py  initdb.py  leave.py  mail.py  schemas.py
src/attendance/config/: attendance  attendance.service  config.py  database-backup.sh  logging.yaml  nginx-config
src/attendance/doc/: Releases.md
src/attendance/static/: style.css
src/attendance/templates/: attn_query.html  base.html  data.html  emp_update.html  forms.html  help.html
src/attendance/templates/auth/: base.html  login.html
