[metadata]
name = attendance
version = 1.0.0a5
author = Saiful Islam
author_email = saiful.kbtel@gmail.com
description = Employee attendance and leave record keeping app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saifuldipak/attendance
project_urls =
    Bug Tracker = https://github.com/saifuldipak/attendance/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires = 
    flask
    flask-sqlalchemy 
    flask-wtf[email] 
    pandas 
    xlrd 
    pyyaml 
    gunicorn

[options.packages.find]
where = src