[metadata]
name = attendance
version = 1.2.0
author = Saiful Islam
author_email = saiful.kbtel@gmail.com
description = Employee attendance and leave record keeping app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saifuldipak/attendance
project_urls =
    Bug Tracker = https://github.com/saifuldipak/attendance/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
install_requires = 
    flask
    flask-sqlalchemy
    flask-migrate
    flask-wtf[email] 
    pandas 
    xlrd 
    pyyaml 
    gunicorn
    openpyxl
    pydantic

